# SGFParserProject

./: README.md
SGFParserProject/: sgf-parser.cabal
SGFParserProject/app/: Main.hs
SGFParserProject/data/: 72908599-321-cdpruitt-woody41.sgf
SGFParserProject/output/: game.json
SGFParserProject/src/: IOManager.hs  UI.hs
SGFParserProject/src/Converters/: SGFToJSON.hs
SGFParserProject/src/Game/: BFS.hs  Engine.hs  Types.hs
SGFParserProject/src/Parsers/: SGFParser.hs
SGFParserProject/test/: Spec.hs
